<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Newindian shop</string>
    <string name="menu_name">Restaurant</string>
    <string name="facebook_id">801192337913216</string>
    <string name="fb_login_protocol_scheme">FB801192337913216</string>
    <string name="language_english">en</string>
    <string name="language_hindi">ar</string>
    <string name="login">Login</string>
    <string name="sign_in_to_your_account" translatable="false">Sign in to your account</string>
    <string name="forgot_password_login">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">------ OR ------</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="skip_amp_continue"><![CDATA[Skip & Continue]]></string>
    <string name="sign_title_hint">Create an account so you can order your\nfavorite food even faster</string>
    <string name="full_name">Full name</string>
    <string name="mobile_no">Mobile</string>
    <string name="referral_code_optional">Referral code (Optional)</string>
    <string name="i_accept_the_terms_amp_conditions"><![CDATA[I accept the terms & conditions]]></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_registered_email">Enter your registered email address below. We will <br> </br> send new password in your email.</string>
    <string name="submit">Submit</string>
    <string name="otp_verification"><![CDATA[Verify & Proceed]]></string>
    <string name="otp_verify">OTP Verification</string>
    <string name="enter_the_otp_sent_to">Enter OTP below and proceed further.</string>
    <string name="enter_otp">Enter OTP here</string>
    <string name="don_t_receive_the_otp">Don’t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="validation_otp">Please enter OTP</string>
    <string name="welcome_back">Welcome</string>
    <string name="categories">Categories</string>
    <string name="today_s_special">Today\'s Special</string>
    <string name="trending_items">Trending</string>
    <string name="recommended">Recommended</string>
    <string name="add">Add</string>
    <string name="search_here">Search Here…</string>
    <string name="testimonial">Testimonials</string>
    <string name="inclusiveofalltaxes">Inclusive of all taxes</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="view_cart">View cart</string>
    <string name="related_product">Related Products</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="addons">Add-ons</string>
    <string name="filter_selection">Filter Selection</string>
    <string name="veg">Veg</string>
    <string name="non_veg">NonVeg</string>
    <string name="search">Search</string>
    <string name="no_data_found">No data found</string>
    <string name="favourite_list">Favourite List</string>
    <string name="cart">My Cart</string>
    <string name="continue_">Continue</string>
    <string name="select_option">Select Option</string>
    <string name="cancel">Cancel</string>
    <string name="take_away">Take Away</string>
    <string name="delivery">Delivery</string>
    <string name="order_summary">Order summary</string>
    <string name="qty">Qty :</string>
    <string name="promo_code">Promocode</string>
    <string name="select_promocode">Select promocode</string>
    <string name="enter_promo_code">Have a promocode?</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
    <string name="tax">Tax</string>
    <string name="pickup">Pickup</string>
    <string name="bill_details">Bill Details</string>
    <string name="tax_0">Tax(0%)</string>
    <string name="delivery_charge">Delivery Fee</string>
    <string name="discount_offer">Discount offer</string>
    <string name="total_amount">Total amount</string>
    <string name="delivery_address">Delivery address</string>
    <string name="select">SELECT</string>
    <string name="address">Set your delivery address</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="address_error">Please select address</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="write_order_instructions">Write order instructions</string>
    <string name="total_pay">Total Pay</string>
    <string name="order_total">Order total</string>
    <string name="offer_error">You are not eligeble for this offer</string>
    <string name="payment_options">Payment Options</string>
    <string name="payment_type_selection_error">Please select payment method</string>
    <string name="order_success">Order Success</string>
    <string name="continue_shooping">Continue Shopping</string>
    <string name="your_order_has_been_successfully_placed_n_amp_will_be_process_by_system">Your order has been successfully placed \n <![CDATA[&]]> will be process by system</string>
    <string name="my_orders">My Orders</string>
    <string name="processing">Processing</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="order_completed">Completed</string>
    <string name="cash">Cash</string>
    <string name="razorpay">Razorpay</string>
    <string name="wallet">Wallet</string>
    <string name="flutter_wave">FlutterWave</string>
    <string name="paystack">Paystack</string>
    <string name="stripe">Stripe</string>
    <string name="payment_type_">Payment Type :</string>
    <string name="order_place">Placed</string>
    <string name="order_ready">Ready</string>
    <string name="accepted">Preparing</string>
    <string name="on_the_way">On the way</string>
    <string name="waiting_for_pickup">Waiting for pickup</string>
    <string name="order_detail">Order Details</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="book_a_table">Book A Table</string>
    <string name="about_us">About us</string>
    <string name="changelayout">Change Layout</string>
    <string name="notification">Notification</string>
    <string name="referandearn"><![CDATA[Refer & Earn]]></string>
    <string name="helpandcontactus"><![CDATA[Help & Contact Us]]></string>
    <string name="ltr">LTR</string>
    <string name="rtl">RTL</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="faqs">FAQs</string>
    <string name="manage_address">Manage Addresses</string>
    <string name="my_wallet">My Wallet</string>
    <string name="log_out">Logout</string>
    <string name="logout">Are you sure to logout from this app?</string>
    <string name="select_application_layout">Select Application Layout</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="help_amp_contact_us"><![CDATA[Help & Contact Us]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="my_address">My Addresses</string>
    <string name="update">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="old_password">Old password</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="homee">HOME</string>
    <string name="office">OFFICE</string>
    <string name="other">Other</string>
    <string name="delete_address_alert">Are you sure to delete this address?</string>
    <string name="add_new_address">Add New Address</string>
    <string name="addaddress">Add Address</string>
    <string name="select_delivery_location">Select Delivery Location</string>
    <string name="change">Change</string>
    <string name="complete_address">Complete Address</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="save_address">Save address</string>
    <string name="update_address">Update address</string>
    <string name="edit_address">Edit Address</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="a_detailed_address_will_help_our_delivery_parnter_nreach_your_doorstep_easily">A detailed address will help our Delivery Parnter reach your doorstep easily</string>
    <string name="house_flat_floor_no">House / Flat / Floor No.</string>
    <string name="apartment_road_area_optional">Apartment / Road / Area (Optional)</string>
    <string name="save_as">Save As</string>
    <string name="save_address_details">Save Address Details</string>
    <string name="wallet_Money">Wallet Money</string>
    <string name="secure_payments">Secure Payments</string>
    <string name="fast_amp_easy_payment"><![CDATA[Fast & Easy Payment]]></string>
    <string name="add_moneyy">+ ADD MONEY</string>
    <string name="no_document_upload_required">No Document Upload required</string>
    <string name="total_balance">Total Balance</string>
    <string name="food_money_can_only_be_used_for_your_food_orders">*WALLET MONEY can only be used for your food orders*</string>
    <string name="instant_refunds">Instant Refunds</string>
    <string name="add_money_">Add Money</string>
    <string name="notes">Notes</string>
    <string name="food_money_cannnot_be_transferred_to_your_bank_account"><![CDATA[-> Wallet Money Cannot Be Transferred to Your Bank Account]]></string>
    <string name="add_note_hint_2"><![CDATA[-> You can used Food Money only on Restaurant orders.]]></string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="expiry">Expiry</string>
    <string name="mm_yy">MM/YY</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="full_name_">Full Name</string>
    <string name="mobileno_number">Mobile Number</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="asterics_3">***</string>
    <string name="expiry_slash">%1$s/</string>
    <string name="expiry_space"> %1$s</string>
    <string name="asterics">**** **** **** **** **</string>
    <string name="pay_amount">PAY %1$s</string>
    <string name="card_details_secured">Your details are safe</string>
    <string name="secured_by_paystack">Secured by Paystack</string>
    <string name="transaction_history">Transaction History</string>
    <string name="walletorder">Wallet Order</string>
    <string name="ordercancelled">Order Cancelled</string>
    <string name="walletrecharge">Wallet Recharge</string>
    <string name="orderid">Order Id :</string>
    <string name="ptrazorpay">Payment Type : RazorPay</string>
    <string name="ptstripe">Payment Type : Stripe</string>
    <string name="ptflutterwave">Payment Type : Flutterwave</string>
    <string name="ptstack">Payment Type : Paystack</string>
    <string name="referral_amount">Referral Amount</string>
    <string name="amount_added_by_admin">Amount Added By Admin</string>
    <string name="amount_deduct_by_admin">Amount Deducted By Admin</string>
    <string name="type_your_description">Enter your review</string>
    <string name="share">SHARE</string>
    <string name="share_this_code_with">Share this code with a friend and you both <br> </br> could be eligible for $0 bonus amount <br> </br> under our Referral Program.</string>
    <string name="delete_cart_msg">go to cart list and remove the item</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="otp_screen_hint">Check your email for OTP.Enter OTP below and proceed further.</string>
</resources>