<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:background="@drawable/bg_corner_white_10"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/_8sdp"
    android:paddingHorizontal="@dimen/_5sdp"
    android:paddingBottom="@dimen/_10sdp"
    tools:ignore="MissingPrefix">




    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_7ssp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/delete_cart_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp" />

    <LinearLayout
        android:id="@+id/llBottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"

        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_select_btn"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/go_to_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            tools:ignore="RtlCompat"

            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/_5sdp"

            android:layout_weight="1"
            android:background="@drawable/bg_select_btn"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            tools:ignore="RtlCompat"
            tools:targetApi="lollipop" />


    </LinearLayout>


</LinearLayout>