<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="onClick"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_18ssp"
            tools:ignore="MissingPrefix" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleOrderDetail"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textAlignment="viewStart"

            android:gravity="start"
            android:text="@string/enter_your_registered_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/ed_white_10"
            android:hint="@string/email"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_10ssp"
            tools:ignore="MissingPrefix" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubmit"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_editfield"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/poppins_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignup"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:onClick="onClick"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>