<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackground"
                android:onClick="onClick"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="MissingPrefix" />
        </RelativeLayout>




            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edOldPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:background="@drawable/bg_onlycorner_gary"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start|center_vertical"
                android:hint="@string/old_password"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                tools:ignore="MissingPrefix" />




            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:background="@drawable/bg_onlycorner_gary"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start|center_vertical"
                android:hint="@string/new_password"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                tools:ignore="MissingPrefix" />



            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:background="@drawable/bg_onlycorner_gary"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start|center_vertical"
                android:hint="@string/confirm_password"
                android:imeOptions="actionGo"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_corner_white_10"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        tools:ignore="MissingPrefix" />
</RelativeLayout>